Made most of the required JDK20 freign memory changes VM still crashes