@@ -17,12 +17,9 @@
  */
 package org.jnetpcap;
 
-import static org.jnetpcap.internal.ForeignUtils.*;
-
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.VarHandle;
 import java.util.ArrayList;
@@ -31,9 +28,7 @@ import java.util.List;
 import org.jnetpcap.constant.SockAddrFamily;
 import org.jnetpcap.util.PcapUtils;
 
-import static java.lang.foreign.MemoryAddress.*;
 import static java.lang.foreign.MemoryLayout.PathElement.*;
-import static java.lang.foreign.MemorySegment.*;
 import static java.lang.foreign.ValueLayout.*;
 
 /**
@@ -132,7 +127,7 @@ public class PcapIf {
 	 * addresses.
 	 */
 	public static class PcapAddr {
-		
+
 		/** The Constant LAYOUT. */
 		private static final MemoryLayout LAYOUT = MemoryLayout.structLayout(
 				ValueLayout.ADDRESS.withName("next"),
@@ -143,16 +138,16 @@ public class PcapIf {
 
 		/** The Constant nextHandle. */
 		private static final VarHandle nextHandle = LAYOUT.varHandle(groupElement("next"));
-		
+
 		/** The Constant addrHandle. */
 		private static final VarHandle addrHandle = LAYOUT.varHandle(groupElement("addr"));
-		
+
 		/** The Constant netmaskHandle. */
 		private static final VarHandle netmaskHandle = LAYOUT.varHandle(groupElement("netmask"));
-		
+
 		/** The Constant broadaddrHandle. */
 		private static final VarHandle broadaddrHandle = LAYOUT.varHandle(groupElement("broadaddr"));
-		
+
 		/** The Constant dstaddrHandle. */
 		private static final VarHandle dstaddrHandle = LAYOUT.varHandle(groupElement("dstaddr"));
 
@@ -160,30 +155,30 @@ public class PcapIf {
 		 * List all.
 		 *
 		 * @param next  the next
-		 * @param scope the scope
+		 * @param arena the scope
 		 * @return the list
 		 */
-		private static List<PcapAddr> listAll(MemoryAddress next, MemorySession scope) {
+		private static List<PcapAddr> listAll(MemorySegment next, Arena arena) {
 			List<PcapAddr> list = new ArrayList<>();
 
-			while (next != null && next != NULL) {
-				MemorySegment mseg = ofAddress(next, LAYOUT.byteSize(), scope);
-				list.add(new PcapAddr(mseg, scope));
+			while (next != null && next != MemorySegment.NULL) {
+				MemorySegment mseg = MemorySegment.ofAddress(next.address(), LAYOUT.byteSize(), arena.scope());
+				list.add(new PcapAddr(mseg, arena));
 
-				next = (MemoryAddress) nextHandle.get(mseg);
+				next = (MemorySegment) nextHandle.get(mseg);
 			}
 			return list;
 		}
 
 		/** The addr. */
 		private final SockAddr addr;
-		
+
 		/** The netmask. */
 		private final SockAddr netmask;
-		
+
 		/** The broadaddr. */
 		private final SockAddr broadaddr;
-		
+
 		/** The dstaddr. */
 		private final SockAddr dstaddr;
 
@@ -191,13 +186,13 @@ public class PcapIf {
 		 * Instantiates a new pcap addr.
 		 *
 		 * @param mseg  the mseg
-		 * @param scope the scope
+		 * @param arena the scope
 		 */
-		PcapAddr(MemorySegment mseg, MemorySession scope) {
-			addr = SockAddr.newInstance(addrHandle.get(mseg), scope);
-			netmask = SockAddr.newInstance(netmaskHandle.get(mseg), scope);
-			broadaddr = SockAddr.newInstance(broadaddrHandle.get(mseg), scope);
-			dstaddr = SockAddr.newInstance(dstaddrHandle.get(mseg), scope);
+		PcapAddr(MemorySegment mseg, Arena arena) {
+			addr = SockAddr.newInstance(addrHandle.get(mseg), arena);
+			netmask = SockAddr.newInstance(netmaskHandle.get(mseg), arena);
+			broadaddr = SockAddr.newInstance(broadaddrHandle.get(mseg), arena);
+			dstaddr = SockAddr.newInstance(dstaddrHandle.get(mseg), arena);
 		}
 
 		/**
@@ -228,10 +223,10 @@ public class PcapIf {
 
 		/** The Constant familyHandle. */
 		private static final VarHandle familyHandle = LAYOUT.varHandle(groupElement("family"));
-		
+
 		/** The Constant portHandle. */
 		private static final VarHandle portHandle = LAYOUT.varHandle(groupElement("port"));
-		
+
 		/** The Constant addrHandle. */
 		private static final VarHandle addrHandle = LAYOUT.varHandle(groupElement("addr"), sequenceElement());
 
@@ -239,23 +234,23 @@ public class PcapIf {
 		 * New instance.
 		 *
 		 * @param value the value
-		 * @param scope the scope
+		 * @param arena the scope
 		 * @return the sock addr
 		 */
-		static SockAddr newInstance(Object value, MemorySession scope) {
-			MemoryAddress addr = (MemoryAddress) value;
-			if (addr == null || addr == NULL)
+		static SockAddr newInstance(Object value, Arena arena) {
+			MemorySegment addr = (MemorySegment) value;
+			if (addr == null || addr == MemorySegment.NULL)
 				return null;
 
-			return new SockAddr(addr, scope);
+			return new SockAddr(addr, arena);
 		}
 
 		/** The family. */
 		private final int family;
-		
+
 		/** The port. */
 		private final int port;
-		
+
 		/** The addr. */
 		private final byte[] addr;
 
@@ -263,10 +258,10 @@ public class PcapIf {
 		 * Instantiates a new sock addr.
 		 *
 		 * @param addr  the addr
-		 * @param scope the scope
+		 * @param arena the scope
 		 */
-		SockAddr(MemoryAddress addr, MemorySession scope) {
-			MemorySegment mseg = ofAddress(addr, LAYOUT.byteSize(), scope);
+		SockAddr(MemorySegment addr, Arena arena) {
+			MemorySegment mseg = MemorySegment.ofAddress(addr.address(), LAYOUT.byteSize(), arena.scope());
 
 			this.family = Short.toUnsignedInt((short) familyHandle.get(mseg));
 			this.port = Short.toUnsignedInt((short) portHandle.get(mseg));
@@ -334,25 +329,25 @@ public class PcapIf {
 
 	/** The Constant nextHandle. */
 	private static final VarHandle nextHandle = LAYOUT.varHandle(groupElement("next"));
-	
+
 	/** The Constant nameHandle. */
 	private static final VarHandle nameHandle = LAYOUT.varHandle(groupElement("name"));
-	
+
 	/** The Constant descHandle. */
 	private static final VarHandle descHandle = LAYOUT.varHandle(groupElement("description"));
-	
+
 	/** The Constant addrsHandle. */
 	private static final VarHandle addrsHandle = LAYOUT.varHandle(groupElement("addresses"));
-	
+
 	/** The Constant flagsHandle. */
 	private static final VarHandle flagsHandle = LAYOUT.varHandle(groupElement("flags"));
 
 	/** interface is loopback. */
 	public final static int PCAP_IF_LOOPBACK = 0x00000001;
-	
+
 	/** interface is up. */
 	public final static int PCAP_IF_UP = 0x00000002;
-	
+
 	/** interface is running. */
 	public final static int PCAP_IF_RUNNING = 0x00000004;
 
@@ -360,17 +355,17 @@ public class PcapIf {
 	 * List all.
 	 *
 	 * @param next  the next
-	 * @param scope the scope
+	 * @param arena the scope
 	 * @return the list
 	 */
-	static List<PcapIf> listAll(MemoryAddress next, MemorySession scope) {
+	static List<PcapIf> listAll(MemorySegment next, Arena arena) {
 		List<PcapIf> list = new ArrayList<>();
 
-		while (next != null && next != NULL) {
-			MemorySegment mseg = ofAddress(next, LAYOUT.byteSize(), scope);
-			list.add(new PcapIf(mseg, scope));
+		while (next != null && next != MemorySegment.NULL) {
+			MemorySegment mseg = MemorySegment.ofAddress(next.address(), LAYOUT.byteSize());
+			list.add(new PcapIf(mseg, arena));
 
-			next = (MemoryAddress) nextHandle.get(mseg);
+			next = (MemorySegment) nextHandle.get(mseg);
 		}
 
 		return list;
@@ -392,16 +387,16 @@ public class PcapIf {
 	 * Instantiates a new pcap if.
 	 *
 	 * @param mseg  the mseg
-	 * @param scope the scope
+	 * @param arena the scope
 	 */
-	PcapIf(MemorySegment mseg, MemorySession scope) {
-		MemoryAddress addrs = (MemoryAddress) addrsHandle.get(mseg);
+	PcapIf(MemorySegment mseg, Arena arena) {
+		MemorySegment addrs = (MemorySegment) addrsHandle.get(mseg);
 
-		name = toJavaString(nameHandle.get(mseg));
-		description = toJavaString(descHandle.get(mseg));
+		name = ((MemorySegment) nameHandle.get(mseg)).getUtf8String(0);
+		description = ((MemorySegment) descHandle.get(mseg)).getUtf8String(0);
 		flags = (int) flagsHandle.get(mseg);
 
-		addresses = PcapAddr.listAll(addrs, scope);
+		addresses = PcapAddr.listAll(addrs, arena);
 	}
 
 	/**
